--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -3,7 +3,7 @@
 
 Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a complex scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, the superposition 
 of the two amplitudes generates an interference term in the combined interaction cross-section. 
-Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
+Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e.~-- for typical LHC centre-of-mass energies of a few TeV -- near $|t| \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
 the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
 is limited to a region at very small $|t|$, making any conclusions on the 
 functional form of the phase very difficult.
@@ -15,7 +15,7 @@ hadronic amplitude, implying in particular a purely exponential modulus and a
 constant phase for all $t$ (see the discussion in 
 Section~\ref{sec:cni_framework}).
 As result, traditionally the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
-equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was quoted. 
+equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{\Re {\cal A}^{\rm N} (0)}{\Im {\cal A}^{\rm N} (0)}$ was quoted. 
 Most of the interest in $\rho$ lies in its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
@@ -33,11 +33,7 @@ Therefore the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) inter
 formula~\cite{kl94} is applied in the present study, which offers much more freedom for the
 choice of the theoretically unknown functional forms of the hadronic modulus 
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
-expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction in impact parameter space, as discussed in Section~...
-\textbf{[not yet written!!!]}.
-
-
-
+expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction in impact parameter space, as discussed in \TODO{Section~...}.
 
 %\todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
 %\> motivation for low-$|t|$ measurement
